<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/modifications_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPiceNaziv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/modifications_title_preview"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewBackground" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnDodajUNarudzbu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPiceNaziv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewOdaberiModifikacije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/modifications_select"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewModifikacije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:clipToPadding="false"
                android:padding="0dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/textViewKolicina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quantity_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/colorRed"
                    android:text="@string/minus_symbol"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewKolicinaBroj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/quantity_default"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/colorGreen"
                    android:text="@string/plus_symbol"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextNapomena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/note_hint"
                android:inputType="textCapCharacters"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="#CCCCCC" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnDodajUNarudzbu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/add_to_order"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>